--- a/hworker-ses.cabal
+++ b/hworker-ses.cabal
@@ -18,16 +18,33 @@ library
   exposed-modules:     System.Hworker.SES
   build-depends:       base >= 4.7 && < 5
                      , hworker
+                     , time
+                     , aeson
+                     , text
+                     , amazonka
+                     , amazonka-ses
+                     , lens
   default-language:    Haskell2010
 
-test-suite hworker-ses-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , hworker-ses
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
+executable example
+   hs-source-dirs: example
+   default-language: Haskell2010
+   main-is: Main.hs
+   Build-depends: base,
+                  hworker-ses,
+                  hworker
+
+-- test-suite hworker-ses-test
+--   type:                exitcode-stdio-1.0
+--   hs-source-dirs:      test
+--   main-is:             Spec.hs
+--   build-depends:       base
+--                      , hworker-ses
+--                      , time
+--                      , aeson
+--                      , text
+--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+--   default-language:    Haskell2010
 
 source-repository head
   type:     git
