--- a/hworker-ses.cabal
+++ b/hworker-ses.cabal
@@ -30,9 +30,10 @@ executable example
    hs-source-dirs: example
    default-language: Haskell2010
    main-is: Main.hs
-   Build-depends: base,
-                  hworker-ses,
-                  hworker
+   Build-depends: base
+                , hworker-ses
+                , hworker
+                , text
 
 -- test-suite hworker-ses-test
 --   type:                exitcode-stdio-1.0
