--- a/hworker-ses.cabal
+++ b/hworker-ses.cabal
@@ -24,6 +24,7 @@ library
                      , amazonka
                      , amazonka-ses
                      , lens
+                     , unordered-containers
   default-language:    Haskell2010
 
 executable example
