--- a/hworker-ses.cabal
+++ b/hworker-ses.cabal
@@ -1,7 +1,7 @@
 name:                hworker-ses
 version:             0.1.0.0
 synopsis:            Library for sending email with Amazon's SES and hworker
-description:         Please see README.md
+description:         See README.
 homepage:            http://github.com/dbp/hworker-ses
 license:             ISC
 license-file:        LICENSE
@@ -10,7 +10,7 @@ maintainer:          dbp@dbpmail.net
 -- copyright:
 category:            Web
 build-type:          Simple
--- extra-source-files:
+extra-source-files:  README.md CHANGELOG.md
 cabal-version:       >=1.10
 
 library
@@ -26,27 +26,6 @@ library
                      , lens
                      , unordered-containers
   default-language:    Haskell2010
-
-executable example
-   hs-source-dirs: example
-   default-language: Haskell2010
-   main-is: Main.hs
-   Build-depends: base
-                , hworker-ses
-                , hworker
-                , text
-
--- test-suite hworker-ses-test
---   type:                exitcode-stdio-1.0
---   hs-source-dirs:      test
---   main-is:             Spec.hs
---   build-depends:       base
---                      , hworker-ses
---                      , time
---                      , aeson
---                      , text
---   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
---   default-language:    Haskell2010
 
 source-repository head
   type:     git
