--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,7 @@
 flags: {}
 packages:
 - '.'
+- 'example'
 - location:
     git: https://github.com/dbp/hworker
     commit: 58bea58a203f38d510372411c85c24f79b93dd68
