--- a/hworker-ses.cabal
+++ b/hworker-ses.cabal
@@ -1,5 +1,5 @@
 name:                hworker-ses
-version:             0.1.0.0
+version:             0.1.1.0
 synopsis:            Library for sending email with Amazon's SES and hworker
 description:         See README.
 homepage:            http://github.com/dbp/hworker-ses
@@ -21,8 +21,9 @@ library
                      , time
                      , aeson
                      , text
-                     , amazonka
-                     , amazonka-ses
+                     , amazonka >= 1
+                     , amazonka-core >= 1
+                     , amazonka-ses >= 1
                      , lens
                      , unordered-containers
   default-language:    Haskell2010
