--- a/stack.yaml
+++ b/stack.yaml
@@ -3,7 +3,8 @@ packages:
 - '.'
 - 'example'
 - location:
-    git: https://github.com/dbp/hworker
+    git: https://github.com/positiondev/hworker
     commit: 58bea58a203f38d510372411c85c24f79b93dd68
+  extra-dep: true
 extra-deps: []
 resolver: lts-8.15
